--- a/frontend/index.html
+++ b/frontend/index.html
@@ -55,11 +55,9 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>AI-Generated Text with GPT-2 using Google Cloud Run</title>
-  <meta name="title" content="AI-Generated Text with GPT-2 using Google Cloud Run" />
-  <meta name="description" content="Generate text from OpenAI's GPT-2 model!" />
-
-
+  <title>AI-Generated Lyrics based on keywords and phrases</title>
+  <meta name="title" content="AI-Generated Lyrics based on keywords and phrases" />
+  <meta name="description" content="Generate custom songs from an AI!" />
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.5/css/bulma.min.css">
   <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
@@ -72,7 +70,7 @@
         <i class="fas fa-robot fa-stack-1x fa-inverse"></i>
       </span>
     </span>
-    <div class="brand-text is-family-code is-uppercase has-text-weight-bold">GPT-2</div>
+    <div class="brand-text is-family-code is-uppercase has-text-weight-bold">Keywords to lyrics</div>
   </div>
 
   <div id="navbarBasicExample" class="navbar-menu is-active">
@@ -80,21 +78,9 @@
 
 
       <div class="navbar-item">
-        Generate custom text from an AI using GPT-2 (using the 117M default model)
+        Generate custom songs from an AI
       </div>
 
-    </div>
-
-    <div class="navbar-end">
-      <div class="navbar-item is-hidden-touch">
-        <div class="buttons">
-          <a class="button is-light" href="https://github.com/minimaxir/gpt-2-cloud-run" target="_blank">
-            <span class="icon">
-              <i class="fab fa-lg fa-github"></i>
-            </span><span>GitHub</span>
-          </a>
-        </div>
-      </div>
     </div>
   </div>
 </nav>
@@ -106,62 +92,52 @@
         <div class="column is-narrow" style="width: 250px;">
           <form id="gen-form">
             <div class="field">
-              <label class="label">Text Prompt</label>
+              <label class="label">Keywords</label>
               <div class="control">
-                <textarea id="prefix" class="textarea" type="text" placeholder="Donald Trump" rows="2"></textarea>
+                <textarea id="prefix" class="textarea" type="text" placeholder="it's not your fault/train station" rows="2"></textarea>
               </div>
-              <p class="help">Starts the generated text with the specified text. <em>(Optional: max 500 characters)</em></p>
+              <p class="help">Generates song using specified keywords and phrases</p>
             </div>
             <div class="field">
-              <label class="label">Generated Text Length</label>
-              <div class="control">
-                <input id="length" class="input" type="text" placeholder="Text input" value="100">
-              </div>
-              <p class="help">Length of the text in tokens to generate. <em>(max: 1023)</em></p>
-            </div>
-
-            <div class="field">
-              <label class="label">Temperature</label>
+              <label class="label">Creativity</label>
               <div class="control">
                 <input id="temperature" class="input" type="text" placeholder="0.7" value="0.7">
               </div>
-              <p class="help">Controls the generated text "creativity." <em>(the higher the temperature, the more
-                  creative)</em></p>
+              <p class="help">Should be between 0.0 and 1.0, the higher the value, the more
+                  creative/crazy the text.</em></p>
             </div>
             <div class="field">
-              <label class="label">Top <em>k</em></label>
-              <div class="control">
-                <input id="top_k" class="input" type="text" placeholder="40" value="40">
-              </div>
-              <p class="help">Constrains the generated text tokens to the top <em>k</em> possibilities. <em>(set to 0 to
-                  disable)</em></p>
+              <label class="label">Repetition penalty
+                <input id="repetition" type="checkbox" checked="checked" value="1.1"/>
+              </label>
+              <p class="help">Activate it to reduce repetiveness on the results.</p>
             </div>
             <div class="buttons">
               <span class="control">
                 <button type="submit" name="submit" id="generate-text" class="button is-link">
                   <span class="icon">
                     <i class="fas fa-md fa-pen"></i>
-                  </span><span>Generate Text!</span></button>
+                  </span><span>Generate Song!</span></button>
               </span>
 
             </div>
           </form>
           <div id="extra-buttons" class="buttons">
             <span class="control">
-              <button id="save-image" class="button is-success">
-                <span class="icon">
-                  <i class="fas fa-md fa-save"></i>
-                </span><span>Save Image</span></button>
-            </span>
-            <span class="control">
               <button id="clear-text" class="button is-danger">
                 <span class="icon">
                   <i class="fas fa-md fa-trash-alt"></i>
                 </span><span>Clear Texts</span</button> </span> </div> </div> <div id="model-output" class="column">
-                  <p id="tutorial" class="subtitle"><em>Generated text will appear here!
-                      Use the form to configure GPT-2 and press <strong>Generate Text</strong>
-                      to get your own text!
+                  <p id="tutorial" class="subtitle"><em>Generated songs will appear here!
+                      Use the form to configure the parameters and press <strong>Generate Song</strong>
+                      to get your own lyrics!
                     </em></p>
+                    - The first song might take 2 or 3 minutes since it requires to load the AI model. After that it should become faster.
+                    </br>
+                    - Even keeping all the parameters the same it's going to generate a new song every time.
+                    </br>
+                    - Keywords might be ignored sometimes, specially if those contain words or phrases not so common on standard songs. You can always try generating again the song if you are not happy with it.
+
           </div>
         </div>
       </div>
@@ -172,7 +148,7 @@
   <footer class="footer">
     <div class="content has-text-centered">
       <p>
-        Made using <a href="https://github.com/minimaxir/gpt-2-simple" target="_blank"><strong>gpt-2-simple</strong></a>
+        Developed by <a href="https://mathigatti.com" target="_blank">Mathias Gatti</a>. Made using <a href="https://github.com/minimaxir/aitextgen" target="_blank"><strong>aitextgen</strong></a>
         and <a href="https://github.com/minimaxir/gpt-2-cloud-run" target="_blank"><strong>gpt-2-cloud-run</strong></a>
         by <a href="https://minimaxir.com" target="_blank">Max Woolf</a>. Original GPT-2 model provided by <a
           href="https://openai.com" target="_blank">OpenAI</a>. This website content
@@ -181,15 +157,11 @@
     </div>
   </footer>
 
-
 </body>
 
 <script src="https://code.jquery.com/jquery-3.4.1.min.js"
   integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous">
   </script>
-
-<script src="http://html2canvas.hertzen.com/dist/html2canvas.min.js">
-</script>
 
 <script type="text/javascript">
   $(function () {
@@ -197,7 +169,7 @@
       e.preventDefault();
       $.ajax({
         type: "POST",
-        url: "https://gpt2-default-dstdu4u23a-uc.a.run.app",
+        url: "https://keywords2song-ilfqxfroaq-uc.a.run.app",
         dataType: "json",
         data: JSON.stringify(getInputValues()),
         beforeSend: function (data) {
@@ -231,22 +203,21 @@
       $('#model-output').text('')
     });
 
-    // https://stackoverflow.com/a/51478809
-    $("#save-image").click(function () {
-
-      html2canvas(document.querySelector('#model-output')).then(function (canvas) {
-
-        saveAs(canvas.toDataURL(), 'gen_texts.png');
-      });
-    });
 
   });
 
   function getInputValues() {
     var inputs = {};
     $("textarea, input").each(function () {
+      if($(this).attr('type') != 'checkbox') {
+        inputs[$(this).attr('id')] = $(this).val();
+      }
+    });
+
+    $("input:checked").each(function () {
       inputs[$(this).attr('id')] = $(this).val();
     });
+
     return inputs;
   }
 
